Fixed up tooltip text and RAM heading misalignment

--- a/css/site.css
+++ b/css/site.css
@@ -147,6 +147,10 @@ table tr td:first-child, table th:first-child {
   margin-left: 280px;
 }
 
+.tooltip-inner {
+    white-space:pre-wrap;
+}
+
 /* Animations */
 
 .view-container {
